package types;

public class Interest {
}
