package types;

public class Profile {
}
